--- a/portfolio-site/src/App.css
+++ b/portfolio-site/src/App.css
@@ -42,6 +42,11 @@
   color: #61dafb;
 }
 
+.aLink { color:black;
+  text-decoration: none;
+  font-weight: bold;
+ } /* Globally */
+
 a { color:white;
   text-decoration: none } /* Globally */
 
